--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "pandas",
     "opencv-python-headless==4.8.1.78",
     "squarify",
+    "opencv-python>=4.11.0.86",
+    "numpy<2",
 ]
 
 [tool.poetry.source]
