--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ name = "com-areal-imagery"
 version = "0.1.0"
 description = "A Python project with specified dependencies"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 dependencies = [
-    "torch",
-    "torchvision",
+	"torch>=2.6.0",
+	"torchvision>=0.20.0",
     "torchaudio",
     "jupyter",
     "nest_asyncio",
@@ -23,9 +23,19 @@ dependencies = [
     "squarify",
     "opencv-python>=4.11.0.86",
     "numpy<2",
+    "split-folders>=0.5.1",
+    "flask>=3.1.1",
 ]
 
-[tool.poetry.source]
-name = "pytorch"
-url = "https://download.pytorch.org/whl/cu118"
-priority = "explicit"
+[tool.uv.sources]
+torch = [
+  { index = "pytorch-cu124", marker = "sys_platform == 'linux'"  },
+]
+torchvision = [
+  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-cu124"
+url = "https://download.pytorch.org/whl/cu124"
+explicit = true
