--- a/Dockerfile.train.flags
+++ b/Dockerfile.train.flags
@@ -1,8 +1,11 @@
 FROM python:3.12-slim-bookworm
+RUN apt-get update && apt-get install -y python3-venv
+
+# install uv
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
 # Copy the project into the image
-ADD . /app
+ADD test_flag_train.py pyproject.toml /app
 
 # Sync the project into a new environment, asserting the lockfile is up to date
 WORKDIR /app
