--- a/Dockerfile.dedect.flags
+++ b/Dockerfile.dedect.flags
@@ -1,56 +1,33 @@
 # Use CUDA 12.4 enabled base image
-FROM nvidia/cuda:12.4.0-runtime-ubuntu22.04
+#FROM nvidia/cuda:12.4.0-runtime-ubuntu22.04
+#FROM pytorch/pytorch:2.4.0-cuda12.4-cudnn9-runtime
+FROM ultralytics/ultralytics:8.3.145-python
 
-# Install Python 3.11 and curl
-RUN apt-get update && apt-get install -y \
-    python3.11 \
-    python3.11-dev \
-    python3.11-venv \
-    curl \
-    && ln -s /usr/bin/python3.11 /usr/bin/python
-
-# Install uv
-#RUN curl -LsSf https://astral.sh/uv/install.sh |  env UV_INSTALL_DIR="/usr/local/uv" | sh
-#ENV PATH="/root/.cargo/bin:/usr/local/uv/bin:$PATH"
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+RUN apt-get update && apt-get install build-essential -y
 
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    libglib2.0-0 \
-    libsm6 \
-    libxext6 \
-    libxrender-dev \
-    libgomp1 \
-    libglib2.0-0 \
-    libgtk-3-0 \
-    libavcodec-dev \
-    libavformat-dev \
-    libswscale-dev \
-    && rm -rf /var/lib/apt/lists/*
 
 # Copy project files first to leverage Docker cache
 COPY pyproject.toml .
 
 # Install PyTorch with CUDA 12.4 support first
-RUN uv add --index pytorch-cu124 torch==2.4.0+cu124 torchvision==0.19.0+cu124
+#RUN uv add --index pytorch-cu124 torch==2.4.0+cu124 torchvision==0.19.0+cu124
 
 # Install all dependencies
 RUN uv sync
 
 # Copy application code
-COPY test_flag_dedect.py .
+COPY test_flag_dedect.py gputest.py /app/
 
 # Copy YOLO model (make sure this file exists in your project directory)
-COPY flags.pt .
+COPY flags.pt /app/
 
 # Create non-root user for security
-RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
+#RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
 # Copy uv to user path
-RUN cp /root/.cargo/bin/uv /usr/local/bin/uv
-USER appuser
+#USER appuser
 
 # Expose port
 EXPOSE 5000
