--- a/Dockerfile.train.flags
+++ b/Dockerfile.train.flags
@@ -1,15 +1,17 @@
-FROM python:3.12-slim-bookworm
-RUN apt-get update && apt-get install -y python3-venv
+#FROM python:3.12-slim-bookworm
+#RUN apt-get update && apt-get install -y python3-venv
 
 # install uv
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+#COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+FROM ultralytics/ultralytics:8.3.145-python
 
 # Copy the project into the image
-ADD test_flag_train.py pyproject.toml /app
+ADD test_flag_train.py pyproject.toml /app/
 
 # Sync the project into a new environment, asserting the lockfile is up to date
 WORKDIR /app
-RUN uv sync --locked
+RUN uv sync 
+#RUN uv sync --locked
 
 # Presuming there is a `my_app` command provided by the project
 CMD ["uv", "run", "test_flag_train.py"]
