--- a/k8s/flags-train-job.yaml
+++ b/k8s/flags-train-job.yaml
@@ -1,11 +1,28 @@
-piVersion: v1
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: flag-train-pvc
   namespace: default
 spec:
-  storageClassName: "default" 
-  volumeName: flag-train
+  storageClassName: ssd-hostpath
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 100Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: datasets-pvc
+  namespace: default
+spec:
+  storageClassName: ssd-hostpath
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 100Mi
 ---
 apiVersion: batch/v1
 kind: Job
@@ -17,8 +34,9 @@ spec:
     spec:
       containers:
       - name: pi
-        image: trieder83/yolo-train:dev0.1
+        image: trieder83/yolo-train:dev0.1-cpu
         #command: ["perl",  "-Mbignum=bpi", "-wle", "print bpi(2000)"]
+        command: ["sleep", "900"]
         env:
         - name: MODEL_PATH
           value: "flags.pt"
@@ -26,15 +44,22 @@ spec:
           requests:
             memory: "2Gi"
             cpu: "1000m"
-            nvidia.com/gpu: 1
+            #nvidia.com/gpu: 1
           limits:
             memory: "4Gi"
             cpu: "2000m"
-            nvidia.com/gpu: 1
+            #nvidia.com/gpu: 1
         volumeMounts:
         - name: flags-train
           mountPath: /app/runs
+        - name: datasets
+          mountPath: /datasets
       restartPolicy: Never
-    volumes:
-   - name: xyz
+      volumes:
+      - name: flags-train
+        persistentVolumeClaim:
+          claimName: flag-train-pvc
+      - name: datasets
+        persistentVolumeClaim:
+          claimName: datasets-pvc
   backoffLimit: 4
