--- a/train/pyproject.toml
+++ b/train/pyproject.toml
@@ -28,15 +28,12 @@ dependencies = [
 ]
 
 
-#[tool.uv.sources]
-#torch = [
-#  { index = "pytorch-cu124", marker = "sys_platform == 'linux'"  },
-#]
-#torchvision = [
-#  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
-#]
+[tool.uv.sources]                                                                                                                                                                                       
+torch = { index = "pytorch-cpu" }                                                                                                                                                                       
+torchvision = { index = "pytorch-cpu" }                                                                                                                                                                 
+torchaudio = { index = "pytorch-cpu" }                                                                                                                                                                  
 
-#[[tool.uv.index]]
-#name = "pytorch-cu124"
-#url = "https://download.pytorch.org/whl/cu124"
-#explicit = true
+[[tool.uv.index]]                                                                                                                                                                                       
+name = "pytorch-cpu"                                                                                                                                                                                    
+url = "https://download.pytorch.org/whl/cpu"                                                                                                                                                            
+explicit = true   
