--- a/dedect/pyproject.toml
+++ b/dedect/pyproject.toml
@@ -12,10 +12,10 @@ dependencies = [
     "pyyaml>=5.3.1",
     "requests>=2.23.0",
     "scipy>=1.4.1",
-	"torch>=2.7.0",
-	"torchaudio==2.7.0",
-    #"torch==1.8.0+cpu",
-    #"torchvision==0.9.0+cpu",
+	#"torch>=2.7.0",
+	#"torchaudio==2.7.0",
+    "torch==2.3.1+cpu",
+    "torchvision==0.18.1+cpu",
     "tqdm>=4.64.0", # progress bars
     "psutil", # system utilization
     #"py-cpuinfo", # display CPU info
